# tt_alabuga

./: README.md  Test_python_backend.docx  pyproject.toml
constraints/: __init__.py  constraints.py
lizards/: __init__.py  lizards.py
proximity/: __init__.py  proximity.py
tasks/: constraints.py  lizards.py  proximity.py
tests/: test_constraints.py  test_lizards.py  test_proximity.py
